Commit logo is not stacked anymore and properly aligned, fixes #22

--- a/web/css/accurator.css
+++ b/web/css/accurator.css
@@ -129,6 +129,10 @@ body {
 	padding-bottom: 10px;
 }
 
+#commitLogo {
+	text-align: right;
+}
+
 #aboutButtons {
 	margin-top: 20px;
 	margin-bottom: 20px;
